Add initial sample data and refine application setup. Small refactors in CollectionBox.java
Added sample data scripts for FUNDRAISING_EVENT, COLLECTION_BOX, and COLLECTION_BOX_AMOUNTS tables to facilitate testing.

--- a/siiAssignment/src/main/resources/application.properties
+++ b/siiAssignment/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=siiAssignment
 spring.datasource.url=jdbc:h2:mem:boxcollectiondb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=BoxCollectionDBpassword
+spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
