--- a/siiAssignment/src/main/resources/application.properties
+++ b/siiAssignment/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
+exchange.rate.api.key=${EXCHANGE_RATE_API_KEY}
